# wumiibo-client

./: CMakeLists.txt  Makefile  Readme.md
source/: AmiiboUtil.cpp  AmiiboUtil.h  amiibo_map.h  amiibo_structs.h  communicator.cpp  communicator.h  main.cpp  main_non_gui.cpp
